--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mongodb": "^6.2.0",
+    "bcrypt": "^5.1.1",
+    "mongoose": "^8.0.1",
     "next": "14.0.1",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7",
