--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^2.0.5",
+    "@auth/mongodb-adapter": "^2.0.6",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "next": "14.0.1",
     "next-auth": "^4.24.5",
+    "node-mailjet": "^6.0.4",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18"
