--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,24 @@
 {
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./*"]
-    }
-  }
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@components/*": ["src/components/*"],
+			"@libs/*": ["src/libs/*"],
+			"@hooks/*": ["src/hooks/*"],
+			"@schemas/*": ["src/schemas/*"],
+			"@dto/*": ["src/dto/*"],
+			"@shared/*": ["src/shared/*"],
+			"@componentData/*": ["src/componentData/*"],
+			"@pages/*": ["pages/*"],
+			"@atoms/*": ["src/components/atoms/*"],
+			"@molecules/*": ["src/components/molecules/*"],
+			"@organisms/*": ["src/components/organisms/*"],
+			"@layouts/*": ["src/components/layouts/*"],
+			"@modules/*": ["src/modules/*"],
+			"@images/*": ["public/images/*"],
+			"@skeletons/*": ["src/skeletons/*"],
+			"@modals/*": ["src/modals/*"],
+			"@services/*": ["src/services/*"]
+		}
+	}
 }
