--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "node-mailjet": "^6.0.4",
     "nodemailer": "^6.9.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.0",
