--- a/package.json
+++ b/package.json
@@ -17,11 +17,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
     "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.353.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "next": "14.0.1",
@@ -29,9 +25,7 @@
     "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.71.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.0",
@@ -45,8 +39,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^9.0.11",
-    "postcss": "^8",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.3.0"
+    "prettier": "^3.2.5"
   }
 }
