--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "sass": "^1.71.1"
   },
   "devDependencies": {
