--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.6",
+    "@tanstack/react-query": "^5.28.6",
     "bcrypt": "^5.1.1",
+    "formik": "^2.4.5",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "next": "14.0.1",
@@ -26,7 +28,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.0",
