--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.6",
     "@tanstack/react-query": "^5.28.6",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "formik": "^2.4.5",
     "mongodb": "^6.3.0",
@@ -28,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "sass": "^1.71.1",
     "yup": "^1.4.0",
     "yup-password": "^0.3.0"
