--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.28.6",
     "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "next": "14.0.1",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
