--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "next": "14.0.1",
+    "nextjs-progressbar": "^0.0.16",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
