--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.5",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.2.4",
     "mongoose": "^8.0.1",
     "next": "14.0.1",
     "nextjs-progressbar": "^0.0.16",
